.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Accounting_Assignment_Departments__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Assignment_Departments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Assignment Departments</label>
    <referenceTo>tc9_bgl__Acc_Assignment_Depts__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>