.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Accounting_Assignment_Dept_Created__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Assignment_Dept_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Assignment Dept Created</label>
    <type>Checkbox</type>
</CustomField>