.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>