.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Confirmed_Started__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Started</label>
    <type>Checkbox</type>
</CustomField>