.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Contract_Fees_Created__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fees_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Fees Created</label>
    <type>Checkbox</type>
</CustomField>