.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Contract_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>