.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Create_Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Create_Rate_Calculator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Rate Calculator</label>
    <type>Checkbox</type>
</CustomField>