.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Cross_Assignment_Group_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Cross_Assignment_Group_By_ID__c</fullName>
    <label>Cross Assignment Group By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>