.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Cross_Assignment_Timesheet_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Assignment_Timesheet_Status__c</fullName>
    <description>Defines which Timesheets will be included in the cross-assignment interpretation process.

Approved - Only Timesheets that meet the cross-assignment criteria wth an Approval Status of &apos;Approved&apos; will be processed for cross-assignment interpretation.

All - All Timesheets that meet the cross-assignment criteria will be processed for cross-assignment interpretation.</description>
    <inlineHelpText>Defines which Timesheets will be included in the cross-assignment interpretation process.

Approved - Only Timesheets that meet the cross-assignment criteria wth an Approval Status of &apos;Approved&apos; will be processed for cross-assignment interpretation.

All - All Timesheets that meet the cross-assignment criteria will be processed for cross-assignment interpretation.</inlineHelpText>
    <label>Cross Assignment Timesheet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>