.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>tc9_pr__Employee__r.FirstName + &quot; &quot; +tc9_pr__Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>