.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Fees_Charged_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Fees_Charged_to_Date__c</fullName>
    <label>Fees Charged to Date</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>