.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Fees_Remaining__c</fullName>
    <label>Fees Remaining</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>