.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/First_2_week_period_start_date__c.field-meta.xml
<CustomField>
    <fullName>First_2_week_period_start_date__c</fullName>
    <inlineHelpText>Populate with the start date of the first 2 week roster period</inlineHelpText>
    <label>First 2 week period start date</label>
    <type>Date</type>
</CustomField>