.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Interpretation_Period__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Period__c</fullName>
    <label>Interpretation Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>2 week</fullName>
            </value>
            <value>
                <fullName>4 week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>