.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Payroll_Invoice_Setting_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Invoice_Setting_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payroll Invoice Setting that will be applied to Pay Transactions related to this Assignment.
Credit Payroll Settings and Invoiceable Fee settings are only related to the Account.</description>
    <inlineHelpText>The Payroll Invoice Setting that will be applied to Pay Transactions related to this Assignment.
Credit Payroll Settings and Invoiceable Fee settings are only related to the Account.</inlineHelpText>
    <label>Payroll Invoice Setting ID</label>
    <referenceTo>tc9_et__Invoice_Setting__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>