.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Perm_Fee_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Perm_Fee_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perm Fee Invoiced</label>
    <type>Checkbox</type>
</CustomField>