.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/PLR_Updated__c.field-meta.xml
<CustomField>
    <fullName>PLR_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated from the &apos;{Assignment} - Daily Scheduled Flow: Set Assignment on PLR&apos;. 
Used as a starting criteria for the flow if FALSE. Marks that the PLR has been updated by Flow.</description>
    <label>PLR Updated</label>
    <type>Checkbox</type>
</CustomField>