.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Rate_Calculator_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Calculator_Template_Name__c</fullName>
    <formula>tc9_et__Rate_Calculator_Template__r.tc9_et__Rate_Calculator_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Calculator Template Name</label>
    <type>Text</type>
</CustomField>