.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Retrigger_Accounting_Assignment_Dept__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_Accounting_Assignment_Dept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrigger Accounting Assignment Dept</label>
    <type>Checkbox</type>
</CustomField>