.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Round_Up_Part_Period_Fees__c.field-meta.xml
<CustomField>
    <fullName>Round_Up_Part_Period_Fees__c</fullName>
    <inlineHelpText>Where set to &apos;Yes&apos; the part period value of the number of contract fees will be rounded up to the next whole number. So if there was 5.25 contract fees then a total of 6 contract fees for the full period value will be created</inlineHelpText>
    <label>Round Up Part Period Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>