.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>Fees_Charged_to_Date__c  +  Fees_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>