.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Assignment__c/recordTypes/Contract_Perm.recordType-meta.xml
<RecordType>
    <fullName>Contract_Perm</fullName>
    <active>true</active>
    <description>Contracted Assignments - fee only</description>
    <label>Payroll Services Fee</label>
</RecordType>